--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,33 +1,123 @@
-* {
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+}
+nav div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: inherit;
+  margin: 0;
+}
+nav div a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+  height: inherit;
+  text-decoration: none;
+  font-family: "Open Sans", sans-serif;
+}
+nav div a:hover {
+  background-color: #abafb0;
+  color: #ffffff;
+}
+nav .navbar-logo {
+  height: 50px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #abafb0;
+}
+footer p {
+  text-align: center;
+  color: #ffffff;
+}
+footer p span {
+  color: #252122;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #abafb0 url("assets/images/thailand.jpg") center;
+  color: #ffffff;
+  height: 500px;
+}
+main h1 {
+  margin: 0;
   font-family: "Sawarabi Mincho", serif;
+}
+main h3 {
+  font-family: "Open Sans", sans-serif;
+}
+main div {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+}
+main div button {
+  width: 130px;
+  border-radius: 4px;
+  border: 0;
+  padding: 0.8em;
+  color: #ffffff;
+  font-family: "Open Sans", sans-serif;
+}
+main div .things-button {
+  background-color: lightgreen;
+}
+main div .tmd-button {
+  background-color: blue;
+}
+
+article {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 1em auto;
+}
+article div {
+  max-width: 700px;
+}
+article div h2 {
+  font-family: "Sawarabi Mincho", serif;
+}
+article div p {
+  font-family: "Open Sans", sans-serif;
+}
+article img {
+  width: 30%;
+  height: 30%;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.not-support {
+  background-color: #ed4141;
+  color: #ffffff;
+  border-radius: 4px;
+  text-align: center;
+  width: 300px;
+  padding: 0.8em 0.4em;
+  margin: 300px auto;
+}
+
+* {
+  font-family: serif;
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-nav ul {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 400px;
-  margin: 0;
-  padding-left: 0;
-}
-nav ul li {
-  list-style: none;
-}
-nav ul li a {
-  text-decoration: none;
-}
-nav .navbar-logo {
-  width: 100px;
 }
 
 /*# sourceMappingURL=App.css.map */
