--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,10 @@
 nav {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 50px;
+  background-color: #ffffff;
 }
 nav div {
   display: flex;
@@ -29,6 +31,17 @@ nav .navbar-logo {
   height: 50px;
 }
 
+@media (max-width: 480px) {
+  nav {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+  }
+  nav div {
+    height: 50px;
+  }
+}
 footer {
   display: flex;
   justify-content: center;
@@ -48,6 +61,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background: #abafb0 url("assets/images/thailand.jpg") center;
   color: #ffffff;
   height: 500px;
@@ -81,8 +95,10 @@ main div .tmd-button {
 
 article {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 90%;
+  max-width: 1080px;
   margin: 1em auto;
 }
 article div {
@@ -99,8 +115,69 @@ article img {
   height: 30%;
   max-width: 300px;
   max-height: 300px;
+  border-radius: 4px;
+  margin: auto;
 }
 
+section {
+  display: flex;
+  flex-direction: column;
+  background-color: #abafb0;
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 2em;
+  margin: 1em 0;
+}
+section h2, section h4 {
+  font-family: "Sawarabi Mincho", serif;
+}
+section div {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: space-evenly;
+  column-gap: 20px;
+}
+section div div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 200px;
+  border-radius: 4px;
+  background-color: lightgrey;
+  color: #252122;
+  padding-bottom: 1.4em;
+}
+section img {
+  width: 80%;
+}
+
+@media (max-width: 900px) {
+  article {
+    flex-direction: column;
+  }
+  article img {
+    width: 60%;
+  }
+  section div {
+    grid-template-columns: auto auto;
+    gap: 10px;
+    justify-content: center;
+  }
+  section div div {
+    width: 300px;
+  }
+}
+@media (max-width: 480px) {
+  section div {
+    grid-template-columns: auto;
+    row-gap: 8px;
+    justify-content: center;
+  }
+  section div div {
+    width: 360px;
+  }
+}
 .not-support {
   background-color: #ed4141;
   color: #ffffff;
