--- a/frontend/src/scss/_home_style.scss
+++ b/frontend/src/scss/_home_style.scss
@@ -1,8 +1,10 @@
 $white: #ffffff;
+$lightgrey: #e6e6e6;
 $grey: #abafb0;
 $black: #252122;
 $sawarabi: "Sawarabi Mincho", serif;
 $opensans: "Open Sans", sans-serif;
+$border-radius: 4px;
 
 main {
     display: flex;
@@ -11,16 +13,17 @@ main {
     align-items: center;
     text-align: center;
     background: $grey url("assets/images/thailand.jpg") center;
-    color: $white;
     height: 500px;
 
     h1 {
-        margin: 0;
         font-family: $sawarabi;
+        margin: 0;
+        color: $white;
     }
 
     h3 {
         font-family: $opensans;
+        color: $white;
     }
 
     div {
@@ -30,7 +33,7 @@ main {
 
         button {
             width: 130px;
-            border-radius: 4px;
+            border-radius: $border-radius;
             border: 0;
             padding: 0.8em;
             color: $white;
@@ -38,11 +41,11 @@ main {
         }
 
         .things-button {
-            background-color: lightgreen;
+            background-color: #6ed442;
         }
 
         .tmd-button {
-            background-color: blue;
+            background-color: #4163ff;
         }
     }
 }
@@ -72,7 +75,7 @@ article {
         height: 30%;
         max-width: 300px;
         max-height: 300px;
-        border-radius: 4px;
+        border-radius: $border-radius;
         margin: auto;
     }
 }
@@ -81,7 +84,6 @@ section {
     display: flex;
     flex-direction: column;
     background-color: $grey;
-    color: $white;
     text-align: center;
     padding-bottom: 2em;
     margin: 1em 0;
@@ -101,8 +103,8 @@ section {
             justify-content: space-evenly;
             align-items: center;
             width: 200px;
-            border-radius: 4px;
-            background-color: lightgrey;
+            border-radius: $border-radius;
+            background-color: $lightgrey;
             color: $black;
             padding-bottom: 1.4em;
         }
@@ -126,11 +128,7 @@ section {
         div {
             grid-template-columns: auto auto;
             gap: 10px;
-            justify-content: center;
-
-            div {
-                width: 300px;
-            }
+            justify-content: space-evenly;
         }
     }
 }
@@ -143,7 +141,7 @@ section {
             justify-content: center;
 
             div {
-                width: 360px;
+                width: 300px;
             }
         }
     }
