--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -4,6 +4,7 @@ $black: #252122;
 @use "footer_style";
 @use "home_style";
 @use "auth_style";
+@use "things_style";
 @use "notsupport_style";
 
 * {
