--- a/frontend/src/scss/_navbar_style.scss
+++ b/frontend/src/scss/_navbar_style.scss
@@ -10,6 +10,10 @@ nav {
     height: 50px;
     background-color: $white;
 
+    a {
+        height: 50px;
+    }
+
     div {
         display: flex;
         justify-content: center;
@@ -17,7 +21,7 @@ nav {
         width: 400px;
         height: inherit;
         margin: 0;
-        a {
+        a, p {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -27,7 +31,7 @@ nav {
             font-family: $opensans;
         }
         
-        a:hover {
+        a:hover, p:hover {
             background-color: $grey;
             color: $white;
         }
@@ -46,7 +50,8 @@ nav {
         height: 100px;
 
         div {
-            height: 50px
+            width: 100%;
+            height: 50px;
         }
     }
 }
