--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -355,18 +355,44 @@ section img {
   }
 }
 .specific-thing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  height: 400px;
   background-color: #abafb0;
+  padding: 2em 0;
 }
 
-.specfic-image {
-  width: 50%;
+.specific-image {
+  width: 300px;
 }
 
 .specific-name, .specific-category, .specific-description {
   font-family: "Sawarabi Mincho", serif;
   color: #ffffff;
+  margin: 8px 0;
+}
+
+.comment-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 4px;
+  width: 90%;
+  height: 28px;
+  max-width: 960px;
+  margin: 0 auto;
+  margin-top: 1em;
+}
+
+.comment-input {
+  width: 100%;
+  height: 100%;
+}
+
+.comment-submit {
+  height: 100%;
 }
 
 .comments {
