--- a/frontend/src/scss/_thing_style.scss
+++ b/frontend/src/scss/_thing_style.scss
@@ -7,18 +7,44 @@ $opensans: "Open Sans", sans-serif;
 $border-radius: 4px;
 
 .specific-thing {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    height: 400px;
     background-color: $grey;
+    padding: 2em 0;
 }
 
-.specfic-image {
-    width: 50%;
+.specific-image {
+    width: 300px;
 }
 
 .specific-name, .specific-category, .specific-description {
     font-family: $sawarabi;
     color: $white;
+    margin: 8px 0;
+}
+
+.comment-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 4px;
+    width: 90%;
+    height: 28px;
+    max-width: 960px;
+    margin: 0 auto;
+    margin-top: 1em;
+}
+
+.comment-input {
+    width: 100%;
+    height: 100%;
+}
+
+.comment-submit {
+    height: 100%;
 }
 
 .comments {
