--- a/frontend/src/scss/_footer_style.scss
+++ b/frontend/src/scss/_footer_style.scss
@@ -1,8 +1,12 @@
+$black: #252122;
 $grey: #abafb0;
+$white: #ffffff;
 $opensans: "Open Sans", sans-serif;
+$sawarabi: "Sawarabi Mincho", serif;
 
 footer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: $grey;
@@ -17,6 +21,51 @@ footer {
             font-family: $opensans;
             font-weight: 600;
             color: $black;
+        }
+    }
+}
+
+.contact-me {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    h3 {
+        font-family: $sawarabi;
+    }
+
+    .contact-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        list-style: none;
+        width: 100%;
+        padding: 0;
+
+        a {
+            font-family: $opensans;
+            color: $black
+        }
+
+        a:hover {
+            color: $white;
+        }
+    }
+}
+
+.link-icon {
+    height: 16px;
+}
+
+@media (max-width: 480px) {
+    .contact-me {
+
+        .contact-list {
+            flex-direction: column;
+            justify-content: space-between;
+            height: 120px;
+            text-align: center;
         }
     }
 }
